--- a/assets/theme_styles/blog-layouts/grid-layouts.less
+++ b/assets/theme_styles/blog-layouts/grid-layouts.less
@@ -6,7 +6,7 @@
 	margin: 10px 0;
 	padding-left: 0;
 	padding-bottom: 17px;
-	border-bottom: solid 1px #eee;
+	border-bottom: solid 1px darken(@background, 6%);
 	@media screen and (max-width: 768px) {
 			border-bottom: none;
 		}
@@ -60,21 +60,19 @@
 		}
 		.postedon {
 			font-size: 12px;
-			color: #aaa;
-			font-weight: lighter;
+			color: darken(@content, 6%);
+			font-weight: 400;
 			margin-bottom: 5px;
 			a {
-				color: #999;
+				color: lighten(@content, 12%);
 				text-decoration: underline;
 				&:hover {
 					color: @accent;
 				}
-				
 			}
 		}
 		.entry-excerpt {
-			
-			color: #777;
+			color: @content;
 			line-height: 1.6em;
 			font-weight:400;
 		}
@@ -84,9 +82,9 @@
 		clear: both;
 	}
 	.hvr-underline-from-center:before {
-				height: 1px;
-				background: @accent;
-			}
+		height: 1px;
+		background: @accent;
+	}
 }
 
 .grid_2_column {
