--- a/assets/theme_styles/css/green.css
+++ b/assets/theme_styles/css/green.css
@@ -1,8 +1,8 @@
 .body-font {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Nunito", sans-serif;
 }
 .title-font {
-  font-family: "Arvo", sans-serif;
+  font-family: "Nunito", sans-serif;
 }
 /* Globals */
 @-moz-keyframes spin {
@@ -56,7 +56,7 @@
   }
 }
 body {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Nunito", sans-serif;
   background: white;
   word-wrap: break-word;
 }
@@ -124,9 +124,7 @@ a:hover {
 }
 #masthead {
   color: #333;
-  min-height: 650px;
   position: relative;
-  overflow-x: hidden;
 }
 #masthead .layer {
   position: absolute;
@@ -178,7 +176,7 @@ a:hover {
   padding: 5px;
   padding-bottom: 0px;
   overflow: auto;
-  background: rgba(229, 212, 231, 0.8);
+  background: rgba(157, 197, 116, 0.8);
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -226,8 +224,6 @@ a:hover {
 #masthead .masthead-inner {
   display: flex;
   align-items: stretch;
-  min-height: 123px;
-  max-height: 175px;
 }
 @media screen and (max-width: 767px) {
   #masthead .masthead-inner {
@@ -240,7 +236,7 @@ a:hover {
   background: green;
   right: 5px;
   position: relative;
-  padding: 30px 0;
+  padding: 6px 0;
   z-index: 9;
   margin-right: 60px;
 }
@@ -252,7 +248,7 @@ a:hover {
   }
 }
 #masthead .masthead-inner .site-branding .site-title {
-  font-size: 30px;
+  font-size: 22px;
   margin: 5px 0;
 }
 #masthead .masthead-inner .site-branding .site-title a {
@@ -274,22 +270,22 @@ a:hover {
 }
 #masthead .masthead-inner .site-branding:after {
   content: "";
-  height: 175px;
-  width: 175px;
+  height: 0;
+  width: 0;
   background: rgba(122, 96, 218, 0);
   position: absolute;
-  right: -180px;
-  top: -57px;
-  border-left: solid 90px green;
-  border-top: solid 90px green;
-  border-bottom: solid 90px transparent;
+  right: -175px;
+  top: -26px;
+  border-left: solid 16px green;
+  border-top: solid 63px green;
+  border-bottom: solid 30px transparent;
   transform: rotate(0deg);
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -ms-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform-origin: left bottom;
-  border-right: solid 90px transparent;
+  border-right: solid 160px transparent;
   z-index: 7;
 }
 @media screen and (max-width: 767px) {
@@ -373,7 +369,7 @@ a:hover {
   text-align: center;
   color: #fff;
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.8);
-  font-family: "Arvo", sans-serif;
+  font-family: "Nunito", sans-serif;
   margin-top: 119px;
   transform: translateY(-50%);
   -webkit-transform: translateY(-50%);
@@ -485,19 +481,38 @@ a:hover {
 }
 /* -------- Nav Menu ---------- */
 #site-navigation {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
   margin-bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
+  background: #9dc574;
+  text-align: right;
+  overflow: visible;
+}
+#site-navigation:before {
+  content: "";
+  border-left: solid 200px #9dc574;
+  position: absolute;
+  left: -200px;
+  height: 100%;
+}
+#site-navigation:after {
+  content: "";
+  border-right: solid 2000px #9dc574;
+  position: absolute;
+  right: -2000px;
+  height: 100%;
+  top: 0;
 }
 #site-navigation ul {
   /* for the Currently active page */
 }
+#site-navigation ul li {
+  display: inline-block;
+  float: none;
+  margin: 0;
+}
 #site-navigation ul li a {
-  padding: 20px 12px;
+  padding: 24px 12px;
   color: white;
-  font-weight: 300;
+  font-weight: bold;
   font-size: 13px;
   text-transform: uppercase;
   transition: 0.2s all ease;
@@ -507,15 +522,16 @@ a:hover {
   -o-transition: 0.2s all ease;
 }
 #site-navigation ul li:hover a {
-  background: rgba(0, 0, 0, 0.6);
+  background: #8ebc5e;
 }
 #site-navigation ul li ul li .menu-desc {
   display: none;
 }
 #site-navigation ul li ul.sub-menu,
 #site-navigation ul li ul.children {
-  background: rgba(0, 0, 0, 0.6);
-  bottom: 100%;
+  background: #8ebc5e;
+  top: 100%;
+  text-align: left;
   display: block;
   transition: 1s all ease;
   -webkit-transition: 1s all ease;
@@ -578,7 +594,7 @@ a:hover {
   padding: 7px 15px;
   font-weight: 300;
   font-size: 11px;
-  background: rgba(31, 31, 31, 0.5);
+  background: #8ebc5e;
   transition: 0.4s background ease, 0.6s padding ease;
 }
 #site-navigation ul li ul.sub-menu a:hover,
@@ -587,7 +603,7 @@ a:hover {
 }
 #site-navigation ul li ul.sub-menu li:nth-child(odd) a,
 #site-navigation ul li ul.children li:nth-child(odd) a {
-  background: rgba(20, 20, 20, 0.5);
+  background: #7fb24a;
 }
 #site-navigation ul li ul.sub-menu li:nth-child(odd) a:hover,
 #site-navigation ul li ul.children li:nth-child(odd) a:hover {
@@ -1017,7 +1033,7 @@ a:hover {
 #primary-mono .byline a {
   text-decoration: none;
   color: green;
-  font-family: "Arvo", sans-serif;
+  font-family: "Nunito", sans-serif;
 }
 #primary-mono .entry-footer {
   border-top: solid 1px #f2f2f2;
@@ -1089,23 +1105,29 @@ a:hover {
 #secondary h1.widget-title {
   font-weight: normal;
   text-transform: uppercase;
-  color: #333;
+  color: white;
   font-size: 18px;
   margin-bottom: 20px;
   margin-top: 0px;
   text-align: center;
+  background: linear-gradient(to right, green 30%, #004d00 100%);
+  padding: 15px;
+  position: relative;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
-#secondary h1.widget-title:after {
+#secondary h1.widget-title:before {
   content: "";
-  display: block;
-  width: 30%;
-  margin-left: 35%;
-  height: 2px;
-  margin-top: 14px;
-  background: green;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 30px;
+  height: 100%;
+  background: #84b650;
+  border-left: solid 10px #98c26d;
 }
 #secondary .widget {
-  font-size: 14px;
+  font-size: 16px;
 }
 #secondary .widget a {
   color: #333;
@@ -1120,7 +1142,7 @@ a:hover {
   color: green;
 }
 #secondary .widget ul {
-  font-size: 13px;
+  font-size: 15px;
   margin-left: 0px;
 }
 #secondary .widget ul li {
@@ -1237,20 +1259,20 @@ a:hover {
   -webkit-animation-direction: alternate;
   animation-direction: alternate;
 }
-#secondary .widget_times_rp li.rp-item {
+#secondary .widget_plum_rp li.rp-item {
   overflow: auto;
   clear: both;
   display: block;
   padding: 8px 0px;
   font-size: 13px;
 }
-#secondary .widget_times_rp .rp-thumb {
+#secondary .widget_plum_rp .rp-thumb {
   width: 52px;
   float: left;
   display: inline-block;
   margin-right: 6px;
 }
-#secondary .widget_times_rp .rp-date {
+#secondary .widget_plum_rp .rp-date {
   color: #4d4d4d;
   font-size: 11px;
 }
@@ -1403,7 +1425,7 @@ a:hover {
 /* Footer Sidebar */
 #footer-sidebar {
   background: #ddd;
-  border-top: solid 3px #e5d4e7;
+  border-top: solid 3px #9dc574;
   clear: both;
 }
 #footer-sidebar .footer-column {
@@ -1414,7 +1436,7 @@ a:hover {
   font-size: 18px;
   text-align: center;
   color: #1a1a1a;
-  border-bottom: solid 1px #e5d4e7;
+  border-bottom: solid 1px #9dc574;
   padding-bottom: 15px;
   text-transform: uppercase;
   margin-bottom: 10px;
@@ -1438,7 +1460,7 @@ a:hover {
   -o-transition: 0.4s all ease;
 }
 #footer-sidebar .footer-column .widget a:hover {
-  color: #d1b3d5;
+  color: #84b650;
 }
 #footer-sidebar .footer-column .widget ul {
   margin-left: 0px;
@@ -1543,20 +1565,20 @@ a:hover {
   -webkit-animation-direction: alternate;
   animation-direction: alternate;
 }
-#footer-sidebar .footer-column .widget_times_rp li.rp-item {
+#footer-sidebar .footer-column .widget_plum_rp li.rp-item {
   overflow: auto;
   clear: both;
   display: block;
   padding: 8px 0px;
   font-size: 13px;
 }
-#footer-sidebar .footer-column .widget_times_rp .rp-thumb {
+#footer-sidebar .footer-column .widget_plum_rp .rp-thumb {
   width: 52px;
   float: left;
   display: inline-block;
   margin-right: 6px;
 }
-#footer-sidebar .footer-column .widget_times_rp .rp-date {
+#footer-sidebar .footer-column .widget_plum_rp .rp-date {
   color: #999999;
   font-size: 11px;
 }
@@ -1767,7 +1789,7 @@ a:hover {
   margin: 10px 0;
   padding-left: 0;
   padding-bottom: 17px;
-  border-bottom: solid 1px #eee;
+  border-bottom: solid 1px #f0f0f0;
 }
 @media screen and (max-width: 768px) {
   .grid {
@@ -1832,19 +1854,19 @@ a:hover {
 }
 .grid .out-thumb .postedon {
   font-size: 12px;
-  color: #aaa;
-  font-weight: lighter;
+  color: #242424;
+  font-weight: 400;
   margin-bottom: 5px;
 }
 .grid .out-thumb .postedon a {
-  color: #999;
+  color: #525252;
   text-decoration: underline;
 }
 .grid .out-thumb .postedon a:hover {
   color: green;
 }
 .grid .out-thumb .entry-excerpt {
-  color: #777;
+  color: #333;
   line-height: 1.6em;
   font-weight: 400;
 }
@@ -1889,144 +1911,62 @@ a:hover {
     clear: left;
   }
 }
-.times {
-  position: relative;
-  padding: 15px;
-  border-bottom: none;
-  overflow: hidden;
-}
-.times .times-container {
-  overflow: hidden;
-  padding: 0;
-  position: relative;
-}
 .times .featured-thumb {
   border-top: none;
-  overflow: hidden;
-  transform: scale(1);
-  -webkit-transform: scale(1);
-  -moz-transform: scale(1);
-  -ms-transform: scale(1);
-  -o-transform: scale(1);
+  border-radius: 7px;
+}
+.times .out-thumb {
+  padding: 10px 5px;
+}
+.times .out-thumb .entry-title {
+  font-size: 22px;
+  text-shadow: 1px 1px #f5f5f5;
+}
+.times .out-thumb .entry-title a {
+  transition: 0.4s all ease;
+}
+.times .out-thumb .entry-excerpt {
+  color: #595959;
+  margin-top: 7px;
+  display: inline-block;
+  line-height: 1.6em;
+}
+.times .out-thumb .postedon {
+  margin-top: 10px;
+}
+.times .out-thumb .postedon .posted-on {
+  background: green;
+}
+.times .out-thumb .postedon .byline {
+  background: #9dc574;
+}
+.times .out-thumb .postedon .posted-on,
+.times .out-thumb .postedon .byline {
+  display: inline-block;
+  padding: 3px 6px;
+  border-radius: 3px;
+  color: white;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 1px;
+  font-size: 10px;
   transition: 0.4s all ease;
   -webkit-transition: 0.4s all ease;
   -moz-transition: 0.4s all ease;
   -ms-transition: 0.4s all ease;
   -o-transition: 0.4s all ease;
-  border-right: solid 7px green;
 }
-.times .out-thumb {
-  padding: 15px;
-  background: white;
-  position: absolute;
-  right: 0;
-  top: 15px;
-  bottom: 15px;
-  text-align: right;
-  max-width: 50%;
-  border-left: solid 10px green;
-  opacity: 1;
-  transform: rotate(0deg) scale(1.65) translateX(200px);
-  -webkit-transform: rotate(0deg) scale(1.65) translateX(200px);
-  -moz-transform: rotate(0deg) scale(1.65) translateX(200px);
-  -ms-transform: rotate(0deg) scale(1.65) translateX(200px);
-  -o-transform: rotate(0deg) scale(1.65) translateX(200px);
-  transition: 0.75s all ease;
-  -webkit-transition: 0.75s all ease;
-  -moz-transition: 0.75s all ease;
-  -ms-transition: 0.75s all ease;
-  -o-transition: 0.75s all ease;
+.times .out-thumb .postedon .posted-on a,
+.times .out-thumb .postedon .byline a {
+  color: white;
+  text-decoration: none;
 }
-@media screen and (max-width: 1199px) {
-  .times .out-thumb {
-    width: 50%;
-  }
+.times .out-thumb .postedon .posted-on:hover,
+.times .out-thumb .postedon .byline:hover {
+  background: black;
 }
-.times .out-thumb .entry-header {
-  transform: rotate(-15deg) scale(0.7);
-  -webkit-transform: rotate(-15deg) scale(0.7);
-  -moz-transform: rotate(-15deg) scale(0.7);
-  -ms-transform: rotate(-15deg) scale(0.7);
-  -o-transform: rotate(-15deg) scale(0.7);
-  padding: 15px;
-  padding-top: 0;
-  position: relative;
-  height: 100%;
-  top: -12px;
-}
-.times .out-thumb .entry-header .postdate {
-  font-weight: bolder;
-  margin-bottom: 25px;
-  transition: 0.5s all ease 0.6s;
-  -webkit-transition: 0.5s all ease 0.6s;
-  -moz-transition: 0.5s all ease 0.6s;
-  -ms-transition: 0.5s all ease 0.6s;
-  -o-transition: 0.5s all ease 0.6s;
-  opacity: 1;
-  transform-origin: top;
-}
-.times .out-thumb .entry-header .postdate .day,
-.times .out-thumb .entry-header .postdate .month {
-  clear: both;
-}
-.times .out-thumb .entry-header .postdate .day {
-  display: block;
-  font-size: 20px;
+.times:hover .entry-title a {
   color: green;
-}
-.times .out-thumb .entry-header .postdate .month {
-  text-transform: uppercase;
-  font-size: 11px;
-}
-.times .out-thumb .entry-header h1.entry-title {
-  font-size: 14px;
-  width: calc(100% + 60px);
-  left: -75px;
-  position: absolute;
-  bottom: 0;
-  opacity: 1;
-  transition: 0.5s all ease 0.6s;
-  -webkit-transition: 0.5s all ease 0.6s;
-  -moz-transition: 0.5s all ease 0.6s;
-  -ms-transition: 0.5s all ease 0.6s;
-  -o-transition: 0.5s all ease 0.6s;
-  transform-origin: bottom;
-}
-.times:hover .out-thumb {
-  transform: rotate(15deg) scale(1.65) translateX(0px);
-  -webkit-transform: rotate(15deg) scale(1.65) translateX(0px);
-  -moz-transform: rotate(15deg) scale(1.65) translateX(0px);
-  -ms-transform: rotate(15deg) scale(1.65) translateX(0px);
-  -o-transform: rotate(15deg) scale(1.65) translateX(0px);
-  opacity: 1;
-}
-.times:hover .out-thumb .postdate {
-  transform: translateY(0);
-  -webkit-transform: translateY(0);
-  -moz-transform: translateY(0);
-  -ms-transform: translateY(0);
-  -o-transform: translateY(0);
-  opacity: 1;
-}
-.times:hover .out-thumb h1.entry-title {
-  opacity: 1;
-}
-.times:hover .out-thumb a:hover {
-  color: green;
-}
-.times:hover .featured-thumb {
-  transform: scale(1) translateX(-50px);
-  -webkit-transform: scale(1) translateX(-50px);
-  -moz-transform: scale(1) translateX(-50px);
-  -ms-transform: scale(1) translateX(-50px);
-  -o-transform: scale(1) translateX(-50px);
-  filter: brightness(0.8);
-  -webkit-filter: brightness(0.8);
-  transition: 0.6s all ease 0.2s;
-  -webkit-transition: 0.6s all ease 0.2s;
-  -moz-transition: 0.6s all ease 0.2s;
-  -ms-transition: 0.6s all ease 0.2s;
-  -o-transition: 0.6s all ease 0.2s;
 }
 /**
  * Global styles
