--- a/assets/theme_styles/sections/navigation.less
+++ b/assets/theme_styles/sections/navigation.less
@@ -1,32 +1,49 @@
 /* -------- Nav Menu ---------- */
 #site-navigation {
-	position: absolute;
-	bottom: 0;
-	width: 100%;	
 	margin-bottom: 0;
-	background: fade(black, 50%);
+	background: @accent2;
+	text-align: right;
+	overflow: visible;
+	&:before {
+		content: "";
+		border-left: solid 200px @accent2;
+		position: absolute;
+		left: -200px;
+		height: 100%;	
+	}
+	&:after {
+		content: "";
+		border-right: solid 2000px @accent2;
+		position: absolute;
+		right: -2000px;
+		height: 100%;	
+		top: 0;
+	}
 	ul {
 		li {
+			display: inline-block;
+			float: none;
+			margin: 0;
 			a {
-				padding: 20px 12px;
-				color: white;
-				font-weight: 300;
+				padding: 24px 12px;
+				color: @onaccent;
+				font-weight: bold;
 				font-size: 13px;
 				text-transform: uppercase;
-				.transition( 0.2s all ease );
-				
+				.transition( 0.2s all ease );				
 			}
 			&:hover {
 				a {
-					background: fade(black,60%);
+					background: darken(@accent2, 6%);
 				}
 			}
-			ul li .menu-desc {
+			ul li .menu-desc {  
 				display: none;
 			}
 			ul.sub-menu, ul.children {
-				background: fade(black,60%);
-				bottom: 100%;
+				background: darken(@accent2, 6%);
+				top: 100%;
+				text-align: left;
 				display: block;
 				.transition( 1s all ease );
 				perspective: 1000;
@@ -71,7 +88,7 @@
 					padding: 7px 15px;
 					font-weight: 300;
 					font-size: 11px;
-					background: fade(lighten(black,12%),50%);
+					background: darken(@accent2, 6%);
 					transition: 0.4s background ease, 0.6s padding ease;
 					&:hover {
 						background: black;
@@ -81,7 +98,7 @@
 				}
 				li:nth-child(odd) {
 					a {
-						background: fade(lighten(black,8%),50%);
+						background:  darken(@accent2, 12%);
 						&:hover {
 							background: black;
 						}
