--- a/assets/theme_styles/variables.less
+++ b/assets/theme_styles/variables.less
@@ -1,15 +1,15 @@
 .body-font {
-	font-family: "Source Sans Pro", sans-serif;
+	font-family: "Nunito", sans-serif;
 }
 .title-font {
-	font-family: "Arvo", sans-serif;
+	font-family: "Nunito", sans-serif;
 }
 
 
 /* Globals */
-@accent: #5b4a9b;
+@accent: #4d70aa;
 @onaccent: white;
-@accent2: #e5d4e7;
+@accent2: #9dc574;
 @header-color: @onaccent;
 @header2: fade(@accent, 50%);
 @background: white;
